--- a/continents/africa.html
+++ b/continents/africa.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Kenya Revenue Authority</title>
+		<title>Companies in Africa</title>
 		<script src='https://cdn.tailwindcss.com'></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<div class="min-h-screen bg-[#0b0f2a] bg-[radial-gradient(circle_at_top_right,_rgba(0,159,183,0.3)_0%,_transparent_60%),_radial-gradient(circle_at_bottom_left,_rgba(0,159,183,0.3)_0%,_transparent_60%)]">
-		<div id="hero" class="w-full h-[80dvh] relative">
+		<div id="hero" class="w-full relative">
             <nav class="">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
                         <div class="flex items-center space-x-4">
-                            <img src="../../assets/logo.svg" class="w-14 h-14 text-black">
+                            <img src="../assets/logo.svg" class="w-14 h-14 text-black">
                             <h4 class="text-2xl">ThreatScope</h4>
                         </div>
                     </div>
@@ -285,60 +285,63 @@
                 </div>
             </nav>
 
-			<div class="mt-24 max-w-5xl mx-auto">
-                <div class="space-y-4">
-                    <div class="flex items-center text-gray-300 space-x-2">
-                        <a class="text-sm" href="#">Companies Affected</a>
-                        <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
-                        <span class="text-gray-300 text-sm">/</span>
-                        <a href="../continents/africa.html" class="text-sm">Africa</a>
-                        <span class="text-gray-300 text-sm">/</span>
-                        <a href="../companies-africa/Kenya Revenue Authority.html" class="text-sm">Kenya Revenue Authority</a>
-                    </div>
-                    <h4 class="font-semibold text-5xl">Kenya Revenue Authority</h4>
-                    <div class="flex items-center space-x-6 mt-2 text-gray-300">
-                        <a href="#overview">Overview</a>
-                        <a href="#method">How it Happened</a>
-                        <a href="#data-compromised">Data Compromised</a>
-                    </div>
+			<div class="mt-10 max-w-7xl mx-auto">
+                <div class="flex items-center text-gray-300 space-x-2">
+                    <a class="text-sm" href="#">Companies Affected</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="../continents/africa.html" class="text-sm">Africa</a>
                 </div>
-                <img src="https://placehold.co/500x500" class="w-full h-96 mt-10 object-cover rounded-lg ">
-                
+                <div class="mt-24 text-center space-y-4 max-w-3xl mx-auto md:px-2 px-4">
+                    <h3 class="text-6xl font-semibold">Companies in Africa</h3>
+                    <p class="text-lg text-gray-200">Lorem ipsum dolor sit amet consectetur adipiscing elit. Dolor sit amet consectetur adipiscing elit quisque faucibus.</p>
+                </div>
 			</div>
 		</div>
-
-		<div class="space-y-8 max-w-5xl mx-auto mt-40">
-            
-            <div class="space-y-4" id="overview">
-                <h4 class="text-3xl font-medium text-purple-300">Overview of the Breach</h4>
-                <p>The Kenya Revenue Authority's activities were hampered by a major cyberattack in 2021. A ransomware outbreak was used in the attack to encrypt important data, such as financial records, tax returns, and taxpayer information. KRA was forced to briefly halt its services as a result, which had an impact on both its online and offline operations. The hack raised questions over the security of private financial information and revealed weaknesses in KRA's cybersecurity architecture. The event brought attention to the need for improved procedures to protect against future cyber threats and spurred a review of the organization's security protocols. The public's confidence in the government's ability to safeguard financial and personal data was also more broadly affected by the attack. Following the attack, KRA started working to improve its incident response capabilities and fortify its cybersecurity posture.</p>
-            </div>
-
-            <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
-                <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
-                <h1 class="text=xl font-medium">KRA's servers</h1>
-                <p class="pl-4">- The attackers were able to run arbitrary code on KRA's servers by taking advantage of a zero-day vulnerability in the popular Log4j logging package. Because of its broad use in many different applications and ease of exploitation, this vulnerability—known as Log4Shell—was very hazardous. After gaining access, the attackers used ransomware to encrypt important data, making it impossible for KRA employees to access. The exploitation of this weakness made it clear how crucial it is to patch vulnerabilities promptly and how important it is for businesses to keep up with new threats.
-                </p>
-                <h1 class="text=xl font-medium">Cybersecurity Infrastructure</h1>
-                <p class="pl-4">- The breach was further facilitated by KRA's lack of timely system updates and inadequate monitoring mechanisms. The organization's cybersecurity infrastructure did not have the necessary tools to detect and respond to the intrusion promptly.This delay allowed the attackers to encrypt significant amounts of data before any countermeasures could be implemented. The incident underscored the need for robust monitoring systems and regular security assessments to identify and address potential vulnerabilities proactively.</p>
-            </div>
-
-
-            <div class="space-y-4" id="data-compromised">
-                <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
-                <h5 class="text-xl font-medium">Taxpayer Data</h5>
-                <p class="pl-4">- Sensitive taxpayer data, such as income information, tax return records, and personal identification numbers, were encrypted as a result of the ransomware attack. People were at serious danger of identity theft and financial fraud as a result of this data exposure. Concerns over the integrity and secrecy of the nation's tax system were also raised by the incident. Restoring the impacted data and guaranteeing the future security of its systems presented difficulties for KRA.</p>
-
-                <h5 class="text-xl font-medium">KRA's Internal Operational Data</h5>
-                <p class="pl-4">- In addition to taxpayer data, the attack also affected KRA's internal operational data and communications. This disruption hindered the organization's ability to carry out its functions effectively, leading to delays in tax processing and revenue collection. The loss of access to internal systems also impacted staff productivity and coordination. The incident highlighted the critical importance of securing not only customer-facing systems but also internal operational infrastructure.</p>
-
-                <h5 class="text-xl font-medium">The impact of the cyberattack on KRA and its stakeholders was extensive. The organization suffered financial losses, reputational harm, and operational interruptions as a result of the breach. Businesses, taxpayers, and government revenue collection were all impacted by the brief service disruption. Public confidence in KRA's capacity to protect private data and ensure service continuity was damaged by the incident. KRA responded by strengthening its cybersecurity framework through personnel training, technology upgrades, and the adoption of stronger security measures. The intrusion served as a wake-up call for other government agencies and companies to examine and upgrade their cybersecurity postures. In order to safeguard public services and vital infrastructure, it also underlined the necessity of a coordinated national cybersecurity strategy.
-
-                </p>
-            </div>
-        </div>
 		
+        <div class="grid grid-cols-3 max-w-6xl mx-auto mt-24 gap-4">
+            <a href="../companies-africa/South African Post Office.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/postoffice.png" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">South African Post Office</p>
+                </div>
+            </a>
+
+            <a href="../companies-africa/City Power.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/citypower.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">City Power</p>
+                </div>
+            </a>
+
+            <a href="../companies-africa/Transnet.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/Transnet.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">Transnet</p>
+                </div>
+            </a>
+
+            <a href="../companies-africa/Libya Telecom & Technology.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/Libya Telecom & Technology.png" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">Libya Telecom & Technology</p>
+                </div>
+            </a>
+
+            <a href="../companies-africa/Libya Telecom & Technology.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+                <img src="../assets/Kenya.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
+                <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
+                <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
+                    <p class="text-white text-lg font-semibold">Kenya Revenue Authority</p>
+                </div>
+            </a>
+
+        </div>
 		
 
 		<footer class="text-white w-full p-4 md:mt-24 mt-10">
