--- a/companies-africa/City Power.html
+++ b/companies-africa/City Power.html
@@ -292,9 +292,9 @@
                         <span class="text-gray-300 text-sm">/</span>
                         <a href="#" class="text-sm">Famous Cyber Attacked Companies</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">Africa</a>
+                        <a href="../continents/africa.html" class="text-sm">Africa</a>
                         <span class="text-gray-300 text-sm">/</span>
-                        <a href="#" class="text-sm">City Power</a>
+                        <a href="../companies-africa/City Power.html" class="text-sm">City Power</a>
                     </div>
                     <h4 class="font-semibold text-5xl">City Power</h4>
                     <div class="flex items-center space-x-6 mt-2 text-gray-300">
@@ -317,20 +317,20 @@
 
             <div class="space-y-4 bg-[#111436] p-8 border border-indigo-900 rounded-lg" id="method">
                 <h4 class="text-3xl font-medium text-purple-300">How the Breach Happened</h4>
-                <h1 class="text=xl font-medium">Detail 1</h1>
+                <h1 class="text=xl font-medium"> Phishing emails</h1>
                 <p class="pl-4">- Phishing emails were probably utilized by the attackers to spread the ransomware payload. The infection may have been brought on by staff members unintentionally clicking on harmful attachments or URLs. This technique highlights the significance of cybersecurity awareness training by taking advantage of human weaknesses. Staff members need to be trained by their organizations to spot and report questionable communications.
                 </p>
-                <h1 class="text=xl font-medium">Detail 2</h1>
+                <h1 class="text=xl font-medium">Pre-existing flaws</h1>
                 <p class="pl-4">- The ransomware took advantage of pre-existing flaws in City Power's software. The systems were vulnerable to assault because timely security fixes were not applied. In order to reduce such risks, regular software updates and vulnerability checks are essential. The repercussions of skipping regular cybersecurity maintenance are illustrated by this occurrence.</p>
             </div>
 
 
             <div class="space-y-4" id="data-compromised">
                 <h4 class="text-3xl font-medium text-purple-300">Data Compromised</h4>
-                <h5 class="text-xl font-medium">Info 1</h5>
+                <h5 class="text-xl font-medium">Operational Data</h5>
                 <p class="pl-4">- Access to operational data that is necessary for controlling the distribution of energy was interfered with by the attack. This made it more difficult for City Power to efficiently monitor and manage the power supply. Long-lasting service interruptions and difficulties resuming regular operations may result from the loss of such data. For utility firms, maintaining the availability and integrity of operating data is essential.</p>
 
-                <h5 class="text-xl font-medium"> Info 2</h5>
+                <h5 class="text-xl font-medium">Customer Account and Billing Information</h5>
                 <p class="pl-4">- The ransomware attack also impacted customer account and billing information. Consumers had trouble accessing their account information and buying electrical units. The possibility of financial theft and privacy issues are brought up by the compromise of this data. Utility companies need to put protections in place to keep consumer data safe from online attacks.</p>
 
                 <h5 class="text-xl font-medium">The impact of the ransomware attack on City Power and its clients was immediate and noticeable. Both residential and commercial regions experienced power outages as a result of operational interruptions. The inability of customers to buy electricity caused a great deal of discontent. The utility's IT infrastructure was reviewed after the event revealed its cybersecurity flaws. Due to service outages, City Power could lose money and suffer reputational harm. The incident acted as a warning to the utilities industry to give cybersecurity top priority. City Power responded by taking action to fortify its defenses against potential cyberattacks.
