update add some pictures and content

--- a/companies-africa/City Power.html
+++ b/companies-africa/City Power.html
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="https://placehold.co/500x500" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../assets/city.jpg" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
