--- a/companies-africa/Libya Telecom & Technology.html
+++ b/companies-africa/Libya Telecom & Technology.html
@@ -303,7 +303,7 @@
                         <a href="#data-compromised">Data Compromised</a>
                     </div>
                 </div>
-                <img src="https://placehold.co/500x500" class="w-full h-96 mt-10 object-cover rounded-lg ">
+                <img src="../assets/libya.png" class="w-full h-96 mt-10 object-cover rounded-lg ">
                 
 			</div>
 		</div>
