--- a/continents/africa.html
+++ b/continents/africa.html
@@ -333,7 +333,7 @@
                 </div>
             </a>
 
-            <a href="../companies-africa/Libya Telecom & Technology.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
+            <a href="../companies-africa/Kenya Revenue Authority.html" class="col-span-1 relative w-full rounded-lg overflow-hidden shadow-lg group">
                 <img src="../assets/Kenya.jpg" class="w-full h-96 object-cover transition-opacity duration-300">
                 <div class="absolute inset-0 bg-gray-900 w-full h-full object-cover opacity-0 transition-opacity duration-300 group-hover:opacity-50"></div>
                 <div class="absolute inset-0 flex justify-center items-center opacity-0 group-hover:opacity-100 transition-opacity duration-300 bg-black/50 p-4">
